[package]
name = "tosserror"
version = "0.1.0"
edition = "2021"
description = "derive(Toss)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]


[dev-dependencies]
thiserror = "1.0"
