[package]
name = "tosserror"
version = "0.1.1"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
description = "derive(Toss)"
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "derive"]
documentation = "https://docs.rs/tosserror"
repository = "https://github.com/poonesnerfect/tosserror"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["thiserror"]
thiserror = ["dep:thiserror", "tosserror-derive/thiserror"]

[dependencies]
tosserror-derive = { version = "=0.1.1", path = "derive" }
thiserror = { version = "1.0", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[dev-dependencies]
thiserror = "1.0"
