[package]
name = "tosserror-derive"
version = "0.1.2"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
description = "Derive implementation of the `tosserror` crate"
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "derive"]
documentation = "https://docs.rs/tosserror-derive"
repository = "https://github.com/poonesnerfect/tosserror"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
thiserror = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
